feat: Release v1.2.0 - Animated LTMNight Shader

--- a/Themes/hyprltm.conf
+++ b/Themes/hyprltm.conf
@@ -20,7 +20,7 @@ HeaderText=""
 
 #################### Background ####################
 
-Background="Backgrounds/ltmnight.png"
+Background="ltmnight"
 BackgroundPlaceholder=""
 BackgroundSpeed=""
 PauseBackground=""
