refactor: Improve packaging script to generate an offline-friendly README, switch shader preview to WEBP, and update config background paths.

--- a/Themes/hyprltm.conf
+++ b/Themes/hyprltm.conf
@@ -20,8 +20,8 @@ HeaderText=""
 
 #################### Background ####################
 
-Background="ltmnight"
-BackgroundPlaceholder=""
+Background="Backgrounds/ltmnight.png"
+BackgroundPlaceholder="Backgrounds/ltmnight.png"
 BackgroundSpeed=""
 PauseBackground=""
 DimBackground="0.0"
