feat: Release v1.2.1, updating previews to optimized WEBM videos and enhancing overall stability and branding.

--- a/packaging/aur/PKGBUILD
+++ b/packaging/aur/PKGBUILD
@@ -1,6 +1,6 @@
 # Maintainer: sniper1720 (Djalel Oukid) <sniper1720@linuxtechmore.com>
 pkgname=ltmnight-sddm-theme
-pkgver=1.2.0
+pkgver=1.2.1
 pkgrel=1
 pkgdesc="A premium, modern SDDM theme with LTMNight styling and animated backgrounds"
 arch=('any')
@@ -17,7 +17,7 @@ package() {
 
     # 1. Install Theme Files
     install -d "${pkgdir}/usr/share/sddm/themes/ltmnight"
-    cp -r Assets Backgrounds Components Themes i18n Main.qml metadata.desktop \
+    cp -r Assets Backgrounds Components Themes i18n Previews Main.qml metadata.desktop \
         "${pkgdir}/usr/share/sddm/themes/ltmnight/"
 
     # 2. Install "setup.sh" as an internal helper
